tests/NormalTests/paczka1/fuzzy1/84818911.err
Error in line 1: 8V2pHPVNLk A201 51,0
Error in line 2: 8V2pHPVNLk S386 58,0
Error in line 22: gcAWL1 A369 89,0
Error in line 28: Qinsv S386 228,88
Error in line 23: FQx A628 66,5
Error in line 29: FQx A369 12,9
Error in line 25: Uxgy81qWd S386 35,2
Error in line 34: A369 A369 40,5
